<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="search_title">Главная</string>
    <string name="fav_title">Избранное</string>
    <string name="team_title">Команда</string>
    <string name="search_screen_title">Поиск вакансий</string>
    <string name="vacancy">Вакансия</string>
    <string name="enter_query">Введите запрос</string>
    <string name="enter_region">Введите регион</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="about_us">Над приложением работали</string>
    <string name="developer1">Александра Зуева</string>
    <string name="developer2">Владислав Хамин</string>
    <string name="developer3">Максим Овсянников</string>
    <string name="developer4">Руслан Фазлыев</string>
    <string name="salary_from">от</string>
    <string name="salary_to">до</string>
    <string name="salary_no_data">Зарплата не указана</string>
    <string name="search_info_no_vacancy">Нет таких вакансий</string>
    <plurals name="search_info_vacancy">
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="few">Найдено %d вакансий</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>
    <string name="no_search_result_placeholder_text">Не удалось получить список вакансий</string>
    <string name="filter_hint">Фильтр</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="responsibilities">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="vacancy_not_found_or_deleted">Вакансия не найдена или\n удалена</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="share_vacancy_title">Поделиться вакансией</string>

    <string name="server_error">Ошибка сервера</string>
    <string name="no_internet">Нет интернета</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="vacancy_not_found">Вакансия не найдена или удалена</string>
    <string name="cant_get_area_list">Не удалось получить список</string>
    <string name="area_not_found">Такого региона нет</string>

    <string name="select_mail_app">Выберите почтовое приложение</string>
    <string name="response_to_vacancy">Отклик на вакансию</string>
    <string name="favourite">Избранное</string>
    <string name="empty_favourite_list">Список пуст</string>
    <string name="filter_settings">Настройка фильтрации</string>
    <string name="work_place">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="without_salary">Не показывать без зарплаты</string>
    <string name="industry_not_found">Отрасль не найдена</string>

    <string name="industries_chooser_title">Выбор отрасли</string>
    <string name="select_button">Выбрать</string>

    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="choosing_work_place">Выбор места работы</string>
    <string name="choosing_country">Выбор страны</string>
    <string name="choosing_region">Выбор региона</string>

    <string name="industry_selection">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="industry_load_error">Ошибка загрузки отраслей</string>
    <string name="choose">Выбрать</string>

    <string name="share_vacancy">Вакансия:</string>
    <string name="share_company">Компания:</string>
    <string name="share_salary">Зарплата:</string>
    <string name="share_town">Город:</string>
    <string name="share_link">Ссылка:</string>

</resources>
