<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search_vacancies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search_for_vacancies"
        app:titleTextAppearance="@style/toolbar_general">

        <View
            android:id="@+id/filter"
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/icon_filter" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_vacancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/vacancy"
        app:titleTextAppearance="@style/toolbar_general"
        style="@style/toolbar_vacancy"
        >

        <View
            android:id="@+id/favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/icon_favorite" />

        <View
            android:id="@+id/share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/icon_share" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_search_vacancy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/enter_query"

            style="@style/text_input_color" />

        <ImageView
            android:id="@+id/icon_close_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_close"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/icon_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_search"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expected_salary"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/enter_amount"
                android:textColor="@color/black_universal"
                style="@style/text_input_color" />

            <ImageView
                android:id="@+id/icon_close_vacancy"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_close" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/apply"
        style="@style/button_general" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/button_general"
        android:background="@color/transparent"
        android:text="@string/reset"
        android:textColor="@color/red" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        style="@style/background_bottom_nav" />

</LinearLayout>


