<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_vacancy"
        style="@style/ToolBarTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="@dimen/size_0dp"
        app:navigationIcon="@drawable/icon_back_arrow"
        app:title="@string/industry_selection"
        />

    <FrameLayout
        android:id="@+id/edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/et_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:hint="@string/enter_industry"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:theme="@style/EditTextTheme" />

        <ImageView
            android:id="@+id/et_end_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="16dp"
            android:padding="5dp"
            android:src="@drawable/icon_search"
            android:visibility="visible" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:enabled="true"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="@dimen/size_20dp"
        android:text="@string/choose"
        android:textAllCaps="false"
        android:textColor="@color/white_universal"
        android:textSize="@dimen/text_size_16sp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="@dimen/size_12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:layout_gravity="center"
            android:src="@drawable/no_result_placeholder" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            style="@style/vacancy_text_22_medium"
            android:text="@string/industry_load_error"/>

    </LinearLayout>

</LinearLayout>
