<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_vacancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/vacancy"
        app:titleTextAppearance="@style/toolbar_general"
        style="@style/toolbar_vacancy"
        >

        <View
            android:id="@+id/favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/icon_favorite" />

        <View
            android:id="@+id/share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/icon_share" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/vacancy_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/vacancy_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/vacancy_text_general"
                android:layout_marginTop="24dp"
                android:text="Android-разработчик"
                android:fontFamily="@font/ys_display_bold"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/vacancy_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="от 100 000 ₽"
                android:layout_marginTop="4dp"
                style="@style/vacancy_text_22_medium"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/gray_light_background"
                >

                <View
                    android:id="@+id/employer_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:background="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </View>

                <TextView
                    android:id="@+id/employer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_universal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="Еда"
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@+id/employer_logo"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="@color/black_universal"
                    android:text="Москва"
                    app:layout_constraintStart_toStartOf="@+id/employer_name"
                    app:layout_constraintTop_toBottomOf="@+id/employer_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/vacancy_text_16_medium"
                android:text="@string/required_experience"
                />

            <TextView
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/vacancy_text_16_regular"
                android:text="От 1 года до 3 лех" />

            <TextView
                android:id="@+id/employment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/vacancy_text_16_regular"
                android:text="Полная занятость, Удаленная работа"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/vacancy_text_22_bold"
                android:layout_marginTop="24dp"
                android:text="@string/vacancy_description"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/vacancy_text_16_medium"
                android:text="@string/responsibilities"
                />

            <TextView
                android:id="@+id/vacancy_responsibilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/vacancy_text_16_regular"
                android:text="Разрабатывать новую функциональность приложения"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/vacancy_text_16_medium"
                android:text="@string/requirements"
                />

            <TextView
                android:id="@+id/vacancy_requirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/vacancy_text_16_regular"
                android:text="100% Kotlin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/vacancy_text_16_medium"
                android:text="@string/conditions"
                />

            <TextView
                android:id="@+id/vacancy_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/vacancy_text_16_regular"
                android:text="сильная команда, с которой можно расти возможность влиять на процесс"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/vacancy_text_22_bold"
                android:layout_marginTop="24dp"
                android:text="@string/key_skills"/>

            <TextView
                android:id="@+id/vacancy_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/vacancy_text_16_regular"
                android:text="Знание классических алгоритмов и структуры данных
Программирование для Android больше одного года
Знание WebRTC"
                />

        </LinearLayout>

    </ScrollView>
    
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminateTint="@color/blue"
        android:layout_marginTop="244dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <View
        android:id="@+id/placeholder_server_error"
        android:layout_width="328dp"
        android:layout_height="223dp"
        android:background="@drawable/placeholder_server_error"
        style="@style/vacancy_placeholder"
        android:visibility="gone"
        />

    <View
        android:id="@+id/placeholder_vacancy_not_found"
        android:layout_width="328dp"
        android:layout_height="223dp"
        android:background="@drawable/placeholder_vacancy_not_found"
        style="@style/vacancy_placeholder"
        android:visibility="gone"
        />

</LinearLayout>
