<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarTextStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/industries_chooser_title"
        app:navigationIcon="@drawable/icon_back_arrow"/>

    <FrameLayout
        android:id="@+id/edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/et_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:hint="@string/enter_query"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:theme="@style/EditTextTheme" />

        <ImageView
            android:id="@+id/et_end_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="16dp"
            android:padding="5dp"
            android:src="@drawable/icon_search"
            android:visibility="visible" />
    </FrameLayout>

    <include
        android:id="@+id/placeholder"
        layout="@layout/placeholder_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="143dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_layout" />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industries_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout"
        tools:listitem="@layout/industry_item" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="24dp"
        android:text="@string/select_button"
        android:paddingVertical="20dp"
        android:visibility="gone"
        style="@style/button_general"
        android:background="@drawable/blue_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>
